force-app/main/default/objects/Test_Scenario__c/Test_Scenario__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a test situation that verifies the fulfillment of a request.</description>
    <label>NA_Test Scenario</label>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>NA Test Scenario ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NA_Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>