force-app/main/default/objects/Test_Scenario__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments on test scenario</description>
    <inlineHelpText>Enables users to provide commentary during reviews of test scenarios</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>