force-app/main/default/objects/Test_Scenario__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <description>Functional area of test scenario</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>