force-app/main/default/objects/Test_Scenario__c/fields/of_Test_Scripts__c.field-meta.xml
<CustomField>
    <fullName>of_Test_Scripts__c</fullName>
    <description>Number of test scripts for the test scenario</description>
    <label># of Test Scripts</label>
    <summaryForeignKey>Test_Script__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>