force-app/main/default/objects/Test_Scenario__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related release of test scenario</description>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>