force-app/main/default/objects/Test_Scenario__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It allows users to create Test Scenarios directly at request level to make testing flow more logical and create better traceability</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>