force-app/main/default/objects/Test_Scenario__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>NA_Test Scenarios (Requirement)</relationshipLabel>
    <relationshipName>NA_Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>